Split tasks into roles and add new roles
The follow roles have been defined:
- apache2 (Installs Apache2)
- mariadb (Installs MariaDB)
- php71 (Installs PHP7.1 and packages)
- server (Configures Ubuntu 14.04)

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,44 +1,10 @@
----
+# Vagrant/Ansible Lamp Stack
+# Nathan Dentzau <nathan.dentzau@gmail.com>
+
 - hosts: all
   become: true
-  tasks:
-
-  - name: Update aptitude and upgrade packages
-    apt:
-      update_cache=yes
-      upgrade=yes
-
-  - name: Install System Packages
-    apt: pkg={{ item }} state=latest
-    with_items:
-      - curl
-      - wget
-
-  - name: Set timezone to America/New_York
-    copy: content='America/New_York\n'
-          dest=/etc/timezone
-          owner=root
-          group=root
-          mode=0644
-          backup=yes
-    notify:
-      - update timezone
-
-  - name: Set language pack to US English UTF-8
-    shell: locale-gen en_US.UTF-8
-
-  - name: Update /etc/hosts; 127.0.0.1 localhost lamp.local
-    lineinfile: dest=/etc/hosts regexp='^127\.0\.0\.1' line='127.0.0.1 localhost lamp.local' owner=root group=root mode=0644
-
-  - name: Add php ppa repository
-    apt_repository: repo=ppa:ondrej/php
-
-  - name: Update aptitude
-    apt: update_cache=yes
-
-  - name: Install php7.1
-    apt: pkg=php7.1 state=latest
-
-  - name: Install php7.1 packages
-    apt: pkg={{ item }} state=latest
-    with_items: [php7.1-cli, php7.1-fpm, php7.1-curl, php7.1-json, php7.1-mbstring, php7.1-mcrypt, php7.1-mysql, php7.1-soap, php7.1-sqlite3, php7.1-xml]
+  roles:
+    - server
+    - apache2
+    - php71
+    - mariadb
