--- a/ansible/roles/apache2/tasks/main.yml
+++ b/ansible/roles/apache2/tasks/main.yml
@@ -4,3 +4,12 @@
 
 - name: Install apache 2.x
   apt: pkg=apache2 state=latest
+
+- name: Set the apache site configuration file
+  template: src=apache.conf.tpl
+            dest=/etc/apache2/sites-available/000-default.conf
+
+- name: Restart apache
+  service: name=apache2
+           enabled=yes
+           state=restarted
